[metadata]
name = PALA
version = 0.2.0
description = Python Audio Loudness Analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = HBB-ThinkTank
author_email = your-email@example.com
license = MIT
url = https://github.com/HBB-ThinkTank/PALA
keywords = audio, loudness, LUFS, true peak, RMS, ITU-R BS.1770

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Sound/Audio :: Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.24
    scipy >= 1.10
    soundfile >= 0.12
    soxr >= 0.5
    numba >= 0.56

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest
    build
    twine
